[package]
name = "atproto_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.4.0"
async-trait = "0.1.73"


[dev-dependencies]
dotenv_codegen = "0.15.0"