[package]
name = "atproto_api"
description = "A simple ATProto implementation in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Reger <mail@jordanreger.com>"]
readme = "README.md"
homepage = "https://atproto.com"
repository = "https://git.sr.ht/~jordanreger/atproto_api"
license = "BSD-3-Clause"
keywords = ["atproto", "atprotocol", "bluesky", "bsky"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.4.0"
async-trait = "0.1.73"


[dev-dependencies]
# atproto_api = { path = ".." }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv_codegen = "0.15.0"